--- a/JSopX.RCLxComponents/JSopX.RCLxComponents.csproj
+++ b/JSopX.RCLxComponents/JSopX.RCLxComponents.csproj
@@ -15,4 +15,22 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.7" />
   </ItemGroup>
 
+
+  <!--<ItemGroup>
+    <ProjectReference Include="..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+  </ItemGroup>-->
+
+  <ItemGroup>
+    <!-- Default case: Reference for JSopX.RCLxComponents -->
+    <ProjectReference Condition="! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX'))"
+                      Include="..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    <!-- Special case: Reference for JSopX.OpenProjectX -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.RCLxComponents'))"
+                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+  </ItemGroup>
+
 </Project>
