--- a/JSopX.RCLxComponents/JSopX.RCLxComponents.csproj
+++ b/JSopX.RCLxComponents/JSopX.RCLxComponents.csproj
@@ -16,10 +16,36 @@
   </ItemGroup>
 
 
+  <!--Option 1: Original-->
+
   <!--<ItemGroup>
     <ProjectReference Include="..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
   </ItemGroup>-->
+
+  <!--Option 2: Working version-->
+  <!--<ItemGroup>
+    
+    
+  -->
+  <!-- Default case: Reference for JSopX.RCLxComponents -->
+  <!--
+  
+    <ProjectReference Condition="! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX'))"
+                      Include="..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    
+  -->
+  <!-- Special case: Reference for JSopX.OpenProjectX -->
+  <!--
+  
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.RCLxComponents'))"
+                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+  </ItemGroup>-->
+
+  <!--Option 3: New code from Nova:-->
 
   <ItemGroup>
     <!-- Default case: Reference for JSopX.RCLxComponents -->
@@ -31,6 +57,11 @@
     <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.RCLxComponents'))"
                       Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
-  </ItemGroup>
 
+    <!-- Additional case for JSopX.AspNetCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.AspNetCore\JSopX.RCLxComponents'))"
+                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+  </ItemGroup>
+  
 </Project>
