--- a/JSopX.RCLxComponents/JSopX.RCLxComponents.csproj
+++ b/JSopX.RCLxComponents/JSopX.RCLxComponents.csproj
@@ -28,7 +28,7 @@
     
     
   -->
-  <!-- Default case: Reference for JSopX.WebAPI -->
+  <!-- Default case: Reference for JSopX.RCLxComponents -->
   <!--
   
     <ProjectReference Condition="! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX'))"
@@ -40,55 +40,135 @@
   <!-- Special case: Reference for JSopX.OpenProjectX -->
   <!--
   
-    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.WebAPI'))"
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.RCLxComponents'))"
                       Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
   </ItemGroup>-->
 
-  <!--Option 3: New code from Nova:-->
 
+  <!--Option 3: New code from Jason:-->
   <ItemGroup>
 
     <!-- Default case: Reference for JSopX.RCLxComponents -->
-    <ProjectReference Condition="! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.AspNetCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.BlazorServerCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.MauiHybridNetCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.AngularCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.ReactCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.VueCore'))"
-                      Include="..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    <ProjectReference Condition="! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.AspNetCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.BlazorServerCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.MauiHybridNetCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.AngularCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.ReactCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.VueCore'))" Include="..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
 
     <!-- Special case: Reference for JSopX.OpenProjectX -->
-    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.RCLxComponents'))"
-                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
 
-    <!-- Special case: Reference for JSopX.AspNetCore -->
-    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.AspNetCore\JSopX.RCLxComponents'))"
-                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    <!-- Special case: Reference for JSopX.OpenProjectX and JSopX.AspNetCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.AspNetCore\JSopX.RCLxComponents'))" Include="..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
 
-    <!-- Special case: Reference for JSopX.BlazorServerCore -->
-    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.BlazorServerCore\JSopX.RCLxComponents'))"
-                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    <!-- Special case: Reference for just JSopX.AspNetCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.AspNetCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
 
 
-    <!-- Special case: Reference for JSopX.MauiHybridNetCore -->
-    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.MauiHybridNetCore\JSopX.RCLxComponents'))"
-                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+
+    <!-- Special case: Reference for JSopX.OpenProjectX and JSopX.BlazorServerCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.BlazorServerCore\JSopX.RCLxComponents'))" Include="..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
 
-    <!-- Special case: Reference for JSopX.AngularCore -->
-    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.AngularCore\JSopX.RCLxComponents'))"
-                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    <!-- Special case: Reference for just JSopX.BlazorServerCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.BlazorServerCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
 
-    <!-- Special case: Reference for JSopX.ReactCore -->
-    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.ReactCore\JSopX.RCLxComponents'))"
-                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+
+
+    <!-- Special case: Reference for JSopX.OpenProjectX and JSopX.MauiHybridNetCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.MauiHybridNetCore\JSopX.RCLxComponents'))" Include="..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
 
-    <!-- Special case: Reference for JSopX.VueCore -->
-    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.VueCore\JSopX.RCLxComponents'))"
-                      Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    <!-- Special case: Reference for just JSopX.MauiHybridNetCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.MauiHybridNetCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
     </ProjectReference>
+
+
+
+    <!-- Special case: Reference for JSopX.OpenProjectX and JSopX.AngularCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.AngularCore\JSopX.RCLxComponents'))" Include="..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    <!-- Special case: Reference for just JSopX.AngularCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.AngularCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+
+
+    <!-- Special case: Reference for JSopX.OpenProjectX and JSopX.ReactCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.ReactCore\JSopX.RCLxComponents'))" Include="..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    <!-- Special case: Reference for just JSopX.ReactCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.ReactCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    <!-- Special case: Reference for JSopX.OpenProjectX and JSopX.VueCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.VueCore\JSopX.RCLxComponents'))" Include="..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    <!-- Special case: Reference for just JSopX.VueCore -->
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.VueCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+
 
   </ItemGroup>
+
+  <!--Option 3: New code from Nova:-->
+  <!--<ItemGroup>
+
+    -->
+  <!-- Default case: Reference for JSopX.RCLxComponents -->
+  <!--
+    <ProjectReference Condition="! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.AspNetCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.BlazorServerCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.MauiHybridNetCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.AngularCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.ReactCore')) AND ! $([System.String]::Copy($(ProjectPath)).Contains('JSopX.VueCore'))" Include="..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    -->
+  <!-- Special case: Reference for JSopX.OpenProjectX -->
+  <!--
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.OpenProjectX\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    -->
+  <!-- Special case: Reference for just JSopX.AspNetCore -->
+  <!--
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.AspNetCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    -->
+  <!-- Special case: Reference for JSopX.BlazorServerCore -->
+  <!--
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.BlazorServerCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+
+    -->
+  <!-- Special case: Reference for JSopX.MuiHybridNetCore -->
+  <!--
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.MauiHybridNetCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    -->
+  <!-- Special case: Reference for JSopX.AngularCore -->
+  <!--
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.AngularCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    -->
+  <!-- Special case: Reference for JSopX.ReactCore -->
+  <!--
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.ReactCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+    -->
+  <!-- Special case: Reference for JSopX.VueCore -->
+  <!--
+    <ProjectReference Condition="$([System.String]::Copy($(ProjectPath)).Contains('JSopX.VueCore\JSopX.RCLxComponents'))" Include="..\..\JSopX.ClassLibrary\JSopX.ClassLibrary\JSopX.ClassLibrary.csproj">
+    </ProjectReference>
+
+  </ItemGroup>-->
+
 </Project>
