--- a/PathConfig.targets
+++ b/PathConfig.targets
@@ -1,9 +1,48 @@
-<Project>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+
+  <!-- Define the paths -->
+
   <PropertyGroup>
-    <RCLxComponentsClassLibraryPath>..\JSopX.ClassLibrary\JSopX.ClassLibrary</RCLxComponentsClassLibraryPath>
+
+    <!-- Get the project directory and solution directory -->
+    <ProjectPath>$(MSBuildProjectDirectory)</ProjectPath>
+    <RootPath>$(SolutionDir)</RootPath>
+
+    <!-- Calculate directory depth -->
+    <ProjectPathDepth>$([System.String]::Copy($(ProjectPath)).Split('\').Length)</ProjectPathDepth>
+    <RootPathDepth>$([System.String]::Copy($(RootPath)).Split('\').Length)</RootPathDepth>
+    <PathDepthDiff>$([MSBuild]::Subtract($(ProjectPathDepth), $(RootPathDepth)))</PathDepthDiff>
+
+    <!-- Conditional Property Setting Based on PathDepthDiff -->
+    <RCLxComponentsClassLibraryPath Condition=" '$(PathDepthDiff)' == '0' ">..\JSopX.ClassLibrary\JSopX.ClassLibrary</RCLxComponentsClassLibraryPath>
+    <RCLxComponentsClassLibraryPath Condition=" '$(PathDepthDiff)' == '1' ">..\..\JSopX.ClassLibrary\JSopX.ClassLibrary</RCLxComponentsClassLibraryPath>
+    <RCLxComponentsClassLibraryPath Condition=" '$(PathDepthDiff)' == '2' ">..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary</RCLxComponentsClassLibraryPath>
+    <RCLxComponentsClassLibraryPath Condition=" '$(PathDepthDiff)' == '3' ">..\..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary</RCLxComponentsClassLibraryPath>
+    <RCLxComponentsClassLibraryPath Condition=" '$(PathDepthDiff)' == '4' ">..\..\..\..\..\JSopX.ClassLibrary\JSopX.ClassLibrary</RCLxComponentsClassLibraryPath>
+
   </PropertyGroup>
 
+
+  <!-- ItemGroup for references -->
   <ItemGroup>
+
+    <!-- Use the dynamically resolved path -->
     <ProjectReference Include="$(RCLxComponentsClassLibraryPath)\JSopX.ClassLibrary.csproj" />
+
   </ItemGroup>
+
+  <!-- Define a target to output messages - this whole message section should be commented out in production -->
+  <Target Name="RCLxComponentsReferencePathConfigCheck">
+    <!-- Print a message if PathConfig.targets is loaded -->
+    <Message Text="JSopX Nova: START PathConfig.targets file check FOR official JSopX RCLxComponents Project... " Importance="high" />
+    <Message Text="JSopX Nova: PathConfig.targets file Found. Loading... " Importance="high" />
+    <Message Text="JSopX Nova: Current Project Path = $(ProjectPath)" Importance="high" />
+    <Message Text="JSopX Nova: Solution Path = $(RootPath)" Importance="high" />
+    <Message Text="JSopX Nova: Project Path Depth: $(ProjectPathDepth)" Importance="high"  />
+    <Message Text="JSopX Nova: Root Solution Path Depth: $(RootPathDepth)" Importance="high"  />
+    <Message Text="JSopX Nova: Directory Depth Difference = $(PathDepthDiff)" Importance="high" />
+    <Message Text="JSopX Nova: Final Directory structure and project for Class Library = $(RCLxComponentsClassLibraryPath)\JSopX.ClassLibrary.csproj" Importance="high" />
+    <Message Text="JSopX Nova: END PathConfig.targets file check FOR official JSopX RCLxComponents Project... " Importance="high" />
+  </Target>
+
 </Project>
